style.css
body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    min-height: 100vh;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.container1 {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-grow: 1;
}

.header {
    background: #1F2937;
    color: white;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.logo {
    height: 100px;
}

ul {
    display: flex;
    justify-content: space-between;
    flex: 0 0 20%;
    list-style: none;
}

.containter2 {
    display: flex;
    justify-content: space-around;
    flex-basis: 100%;
    margin-bottom: 30px;
}

.footer {
    background: #1F2937;
    color: white;
    height: 72px;
    display: flex;
    justify-content: center;
    align-items: center;
}

